# StelaEngine

./: .gitignore  .gitmodules  CMAKE_BUILD.md  CMakeLists.txt  CMakeLists.txt.test  CMakePresets.json  LICENSE  README.md  Stela.sln  base-styles.css  build.bat  build.sh  button-dropdown-styles.css  console-styles.css  dom-elements.js  file-manager.js  game-camera-service.js  game-manager.js  gltf-loader-manager.js  index.html  level-data-manager.js  level-manager-styles.css  main.js  object-manager.js  object-scripting-service.js  panel-styles.css  project-files-styles.css  project-manager.js  project-state-coordinator.js  properties-panel-styles.css  run_tests.bat  run_tests.sh  scene-serializer.js  script-editor-styles.css  script-engine.js  stela-engine.html  style.css  tab-styles.css  three-scene.js  ui-hierarchy-panel-manager.js  (+23 more)
Stela/: CMakeLists.txt  Stela.vcxproj  Stela.vcxproj.filters
Stela/Includes/glad/: glad.h
Stela/src/: Main.cpp  glad.c
Stela/src/API/: Config.hpp
Stela/src/API/Input/: SInput.cpp  SInput.hpp
Stela/src/API/Render/: SRender.cpp  SRender.hpp
Stela/src/API/Terminal/ANSI/: ANSIcolorCode.hpp
Stela/src/API/UI/: Theme.hpp
Stela/src/API/Window/: SWindow.cpp  SWindow.hpp
Stela/src/Docs/SourceDocs/API/Input/: SInput Docs.md
Stela/src/Docs/SourceDocs/API/Render/: SRender Docs.md
Stela/src/Docs/SourceDocs/API/Window/: SWindow Docs.md
css/: styles.css
js/: config.js  main.js
